--- a/css/style.css
+++ b/css/style.css
@@ -545,14 +545,86 @@ main .options .options-content-lucha .Resultado .Resultado-button {
   border: none;
   cursor: pointer;
 }
-
-@-webkit-keyframes fade {
-  0% {
-  }
-}
-
-@keyframes fade {
-  0% {
-  }
-}
 /*# sourceMappingURL=style.css.map */
+.help{
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 6px;
+  margin-left: 10px;
+  z-index: 90;
+}
+.help a{
+  display: contents;
+}
+#svg-icon-help{
+  width:auto;
+  height: 40px;
+  transition: all 0.5s;
+  border-radius: 100px;
+}
+#svg-icon-help:active{
+  opacity: .8;
+}
+#svg-icon-help:hover{
+  transform: scale(.9);
+}
+.ventana{
+background: linear-gradient(90deg, rgba(180,164,232,1) 0%, rgb(218 164 232) 35%, rgba(243,196,214,1) 100%);
+width:40%;
+padding: 20px;
+margin: 20% auto;
+position: relative;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+flex-wrap: nowrap;
+align-items: flex-end;
+}
+.modal{
+background-color: rgba(0,0,0,.8);
+position:absolute;
+height: 101.3%;
+
+top:0;
+right:0;
+bottom:0;
+left:0;
+opacity:0;
+pointer-events:none;
+transition: all 1s;
+
+z-index: 1000;
+}
+@media screen and (max-width: 750px) {
+  
+  .modal{
+    height: 107.2%;;
+    }
+  .ventana{
+    width: 80%;
+  }
+}
+.contenido-ayuda{
+  width: 100%;
+  display:flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: flex-start;
+  align-items: flex-start;
+  font-family: 'Roboto Mono', monospace;
+}
+.contenido-ayuda h2{
+  place-self: center;
+}
+#cross{
+  display:contents;
+}
+#cross img{
+  width:25px;
+  height:auto;
+}
+#IrVentanaFlotante:target{
+opacity:1;
+pointer-events:auto;
+}
